first draft of actigraphy2GA finally done

--- a/notebooks/meth_results_writing.ipynb
+++ b/notebooks/meth_results_writing.ipynb
@@ -808,8 +808,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "1b2be50a-1e6b-4755-aa8b-1620c4ec06c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "train    1726\n",
+       "test      737\n",
+       "Name: split, dtype: int64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "md['split'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "4b377387-4c1e-4bcc-aa71-984495f2f605",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2463, 131)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "md.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72377053-ce91-43a0-b42a-0fc2ad4f8ef5",
    "metadata": {},
    "outputs": [],
    "source": []
